--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
     "openai": "^6.22.0",
     "pino": "^10.3.1",
     "qrcode-terminal": "^0.12.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.2.0"
   }
 }
